Updated elections page.

--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -4,30 +4,333 @@ title: Elections
 permalink: /auditor/elections/
 calendar: true
 ---
-<div class="row">
-
-</div>
 <!-- Info Row -->
 <div class="row">
-  <div class="col-md-4">
-
+  <div class="col-md-8">
+    <div class="well">
+      More to come soon.
+    </div>
+    <div class="" id="upcomginElections">
+      <div class="panel panel-primary">
+        <div class="panel-heading text-center">
+          <h4>Upcoming Elections</h4>
+        </div>
+        <div class="panel-body">
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default" data-date="03/13/2018">
+              <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    March 13 - Supplemental Levy and Possible Recall
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Sample Ballots
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Additional Resources
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default" data-date="05/15/2016">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    May 15 - Federal, State, and County. Taxing District Financial.
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Sample Ballots
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Additional Resources
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default" data-date="08/28/2018">
+              <div class="panel-heading" role="tab" id="headingThree">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    August 28 - School District Financial.
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Sample Ballots
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Additional Resources
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default" data-date="11/06/2018">
+              <div class="panel-heading" role="tab" id="headingFour">
+                <h4 class="panel-title">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    November 6 -  Federal, State, and County. Taxing District Financial.
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+                <div class="panel-body">
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Sample Ballots
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="panel panel-default">
+                      <div class="panel-heading">
+                        Additional Resources
+                      </div>
+                      <div class="panel-body">
+                        Basic panel example
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingFive">
+                <h4 class="panel-title text-center">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                      More Info
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                <div class="panel-body">
+                  <p>
+                    For details of which specific districts, cities, and any possible elections please see the 2017 Election Calendar on the Elections Home Page under Election Links.
+                  </p>
+                  <p>
+                    Note: *When a deadline happens on a Saturday or Sunday the date is extended until the following business day. Our goal is to get absentee ballots mailed to you as soon as possible so that they can be returned in time to be counted.
+                  </p>
+                  <p>
+                    Please be sure to complete the FPCA including all the necessary information and identification required by the State of Idaho, Email addresses and complete telephone numbers are very helpful in the absentee voting process.
+                  </p>
+                  <p>
+                    <strong>REMEMBER: Voter registration closes 25 days before every election date.</strong>
+                  </p>
+                  <p class="text-center">
+                    Latah County Elections Department December 11, 2017
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="panel-footer text-center">
+          <p>
+            If you have any questions or concerns please contact the Latah County Elections Department at 208-883-2278 and we will be happy to assist you in this process.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="col-md-4">
-
-  </div>
-  <div class="col-md-4">
+    <!-- Contact -->
     {% include contactBlock.html %}
+    <!-- Upcoming Events -->
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="text-center">Upcoming</h4>
       </div>
-        <div id='loading' class="text-center"><i class="fa fa-spinner fa-2x fa-spin"></i></div>
-        <div id='calendar'></div>
-        <script text/javascript>
-          calendarList('/api/electionCalendar.json', 6, 'months');
-          calendarMonth();
-        </script>
+      <div id='loading' class="text-center"><i class="fa fa-spinner fa-2x fa-spin"></i></div>
+      <div id='calendar'></div>
+    </div><br />
+    <!-- Election Resources -->
+    <!-- <div class="panel panel-default" id="electionResources">
+      <div class="panel-heading">
+        <h3 class="panel-title">Election Resources</h3>
+      </div>
+      <div class="panel list-group">
+        <div id="menu" data-children=".item">
+          <a class="list-group-item item" data-toggle="collapse" data-target="#er1" data-parent="#menu">
+            Voter Registration and Absentee Requests
+          </a>
+          <div class="list-group" id="er1">
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Online Voter Registration</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Printable Voter Registration Form</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Absentee Ballot Request Form</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Absentee Ballot Status</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Political Party Affiliation Form</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Military/Overseas Registration and Absentee Request</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Out of State Voter Registration and Absentee Request Information</a>
+          </div>
+          <a href="" class="list-group-item">Polling/Voting Location Finder</a>
+          <a class="list-group-item" data-toggle="collapse" data-target="#er3" data-parent="#menu">Prior Elections and Results</a>
+          <div id="er3" class="sublinks collapse">
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Past Elections</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Election Results &amp; Information</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> State of Idaho Election Results</a>
+          </div>
+          <a class="list-group-item" data-toggle="collapse" data-target="#er4" data-parent="#menu">Maps</a>
+          <div id="er4" class="sublinks collapse">
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> City of Moscow Precinct Map</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> City of Moscow Commissioner District Map</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Latah County Precinct Map</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Latah County Commissioner District Map</a>
+          </div>
+          <a class="list-group-item" data-toggle="collapse" data-target="#er5" data-parent="#menu">Calendars &amp; Links</a>
+          <div id="er5" class="sublinks collapse">
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> 2018 Election Calendar for Latah County</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> 2018 State Consolidation Calendar</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> City Clerks</a>
+            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Political Parties in Idaho</a>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+    <div class="panel-group" id="electionResources" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="erHeadingOne">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#electionResources" href="#er1" aria-expanded="true" aria-controls="er1">
+              Voter Registration and Absentee Requests
+            </a>
+          </h4>
+        </div>
+        <div id="er1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingOne">
+          <div class="list-group">
+            <a href="https://apps.idahovotes.gov/OnlineVoterRegistration/" target="_blank" class="list-group-item">Online Voter Registration</a>
+            <a href="https://idahovotes.gov/media/voter_registration.pdf" target="_blank" class="list-group-item">Printable Voter Registration Form</a>
+            <a href="https://idahovotes.gov/media/absentee.pdf" target="_blank" class="list-group-item">Absentee Ballot Request Form</a>
+            <a href="https://apps.idahovotes.gov/YourPollingPlace/AbsenteeBallotEnquiry.aspx" target="_blank" class="list-group-item">Absentee Ballot Status</a>
+            <a href="https://idahovotes.gov/media/party_affiliation.pdf" target="_blank" class="list-group-item">Political Party Affiliation Form</a>
+            <a href="https://www.fvap.gov/idaho" target="_blank" class="list-group-item">Military/Overseas Registration and Absentee Request</a>
+            <a href="https://vote.gov/" target="_blank" class="list-group-item">Out of State Voter Registration and Absentee Request Information</a>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="erHeadingTwo">
+          <h4 class="panel-title">
+            <a href="https://apps.idahovotes.gov/YourPollingPlace/WhereDoIVote.aspx" target="_blank">Polling/Voting Location Finder</a>
+          </h4>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="erHeadingThree">
+          <h4 class="panel-title">
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#electionResources" href="#er3" aria-expanded="false" aria-controls="er3">
+               Prior Elections and Results
+            </a>
+          </h4>
+        </div>
+        <div id="er3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingThree">
+          <div class="list-group">
+            <a href="#" class="list-group-item">Past Elections</a>
+            <a href="#" class="list-group-item">Election Results &amp; Information</a>
+            <a href="http://www.sos.idaho.gov/elect/results.htm" target="_blank" class="list-group-item">State of Idaho Election Results</a>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="erHeadingFour">
+          <h4 class="panel-title">
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#electionResources" href="#er4" aria-expanded="false" aria-controls="er4">
+                Maps
+            </a>
+          </h4>
+        </div>
+        <div id="er4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingFour">
+          <div class="list-group">
+            <a href="https://www.latah.id.us/elections/Voter%20Precincts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item">City of Moscow Precinct Map</a>
+            <a href="https://www.latah.id.us/elections/Commissioner%20Districts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item">City of Moscow Commissioner District Map</a>
+            <a href="https://www.latah.id.us/elections/Voter_Precincts_2014_11x17.pdf" target="_blank" class="list-group-item">Latah County Precinct Map</a>
+            <a href="https://www.latah.id.us/elections/CommissionerDistricts.pdf" target="_blank" class="list-group-item">Latah County Commissioner District Map</a>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="erHeadingFive">
+          <h4 class="panel-title">
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#electionResources" href="#er5" aria-expanded="false" aria-controls="er5">
+               Calendars &amp; Links
+            </a>
+          </h4>
+        </div>
+        <div id="er5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingFive">
+          <div class="list-group">
+            <a href="https://www.latah.id.us/elections/2018/electionsCalendar.pdf" target="_blank" class="list-group-item">2018 Election Calendar for Latah County</a> <!-- Todo - a add pdf to the site -->
+            <a href="https://sos.idaho.gov/elect/2018Calendar.html" target="_blank" class="list-group-item">2018 State Consolidation Calendar</a>
+            <a href="#" class="list-group-item">City Clerks</a> <!-- Todo -add in modal -->
+            <a href="#" class="list-group-item">Political Parties in Idaho</a><!-- Todo -add in modal -->
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 <!-- End Info Row -->
+<div class="row">
+  
+</div>
+
+{% asset elections.js %}
+
+<script text/javascript>
+  calendarList('Elections', 30);
+  calendarMonth();
+</script>
