Removed elections.js.

--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -328,7 +328,7 @@ calendar: true
   
 </div>
 
-{% asset elections.js %}
+<!-- {% asset elections.js %} -->
 
 <script text/javascript>
   calendarList('Elections', 30);
