--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -15,7 +15,7 @@ news: true
 					<figcaption class="figure-caption text-center">Clerk Henrianne Westberg</figcaption>
 				</figure>
 				<p class="panel-body">
-					Welcome to the Latah County Auditor, Elections and Recorder’s Office. We prepare the county's payroll and manage all accounts receivable and payable. Our Auditing staff also prepares the county's annual budget and its year-end financial reports. We are also the Election’s Office, where we register voters, maintain the database of registered voters, and organize our county, state and national elections. Furthermore, our office records documents associated with property, issues marriage license applications and are agents for executing U.S. Passports.
+					Welcome to the Latah County Auditor, Elections and Recorder’s Office. We prepare the county's payroll and manage all accounts receivable and payable. Our Auditing staff also prepares the county's annual budget and its year-end financial reports. We are also the Election’s Office, where we register voters, maintain the database of registered voters, and organize our county, state and national elections. Furthermore, our office records documents associated with property, issues marriage license applications and are agents for executing U.S. Passports. 
 				</p>
 			</div>
 		</div>
@@ -53,7 +53,7 @@ news: true
 			<div class="list-group">
 				<li class="list-group-item text-center">Marriage License</li>
 				<li class="list-group-item text-center">Deed Recording</li>
-				<li class="list-group-item text-center">Passorts</li>
+				<li class="list-group-item text-center">Passports</li>
 			</div>
 		</div>
 
