--- a/_pages/home.html
+++ b/_pages/home.html
@@ -46,7 +46,7 @@ news: true
   <div class="col-md-4" id="contact">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <div class="panel-title text-center">Contact</div>
+        <div class="panel-title text-center">Building Information</div>
       </div>
       <div class="panel-body">
         <ul class="list-group">
