Updated description. Fixes #54.

--- a/_pages/dept/building_grounds/home.html
+++ b/_pages/dept/building_grounds/home.html
@@ -12,7 +12,7 @@ permalink: /building_grounds/
       <div class="panel panel-primary">
         <div class="panel-body text-justify">
           <p>
-            Under the supervision of the Board of Commissioners, this department is responsible for maintenance of the Courthouse necessary to provide a safe and comfortable environment for the public and employees. This includes janitorial duties of all types inside the building and grounds care outside as well as parking lot maintenance such as snow removal, etc. This department also cares for the Courthouse Annex, the County Fairgrounds and the historic McConnell Mansion.
+            Under the supervision of the Board of Commissioners, this department is responsible for maintenance of the Courthouse, necessary to provide a safe and comfortable environment for the public and employees. This includes janitorial duties of all types inside the building, and grounds care outside, as well as parking lot maintenance, such as snow removal, etc. This department also cares for the Courthouse Annex, the County Fairgrounds and the historic McConnell Mansion.
           </p>
         </div>
       </div>
