--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -8,40 +8,125 @@ news: true
 
 <div class="row" id="infoRow">
   <div class="col-md-8">
-
     <!-- description -->
-    <div class="col-md-12">
-      <div class="panel panel-primary">
-        <figure style="float:left; padding:0.5em; margin-right:10px; ">
-					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/PatrickVaughan.png %}</img>
-					<figcaption class="figure-caption text-center">Assessor Patrick Vaughan</figcaption>
-				</figure>
-        <p class="panel-body">
-          The appraisal of all property, real and personal, in Latah County is the responsibility of the elected county Assessor. The
-          two main purposes of the Assessor are to identify current owners of property and to place a value on property for
-          assessment purposes. Another main function is to track all exemptions including homeowner's and circuit breakers.
-          The Assessor also administers the licensing and titling of motor vehicles.
-        </p>
+    <div class="row" id="deptDescription">
+      <div class="col-md-12">
+        <div class="panel panel-primary">
+          <div class="panel-body">
+            <figure style="float:left; padding:0.5em; margin-right:10px; ">
+              <img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/PatrickVaughan.png %}</img>
+              <figcaption class="figure-caption text-center">Assessor Patrick Vaughan</figcaption>
+            </figure>
+            <p>
+              The County Assessor maintains a current record of ownership of all property within Latah County, prepares a map or “assessor’s plat record” of all real property within the county, and assesses the market value of all property in the county. The Assessor must notify each property owner of the assessed value of their property on an annual Assessment Notice.
+            </p>
+            <p>
+              The Assessor submits annual property rolls and abstracts with all of the county’s assessment data to the County Auditor and the State Tax Commission. These reports include the overall taxable value of all property located within the boundaries of local taxing districts. This total taxable value is part of the calculation used by local taxing districts to set their annual property tax levies.
+            </p>
+            <p>
+              The property tax levy is the rate at which all property will be taxed in order to collect the amount of property taxes approved in that year’s budget. The assessed value of each property determines that property owner’s share of the annual property taxes to be collected.
+            </p>
+            <p>
+              The Assessor’s Office also administers homeowner exemption applications, as well as the state Property Tax Reduction Program (also known as “Circuit Breaker”) for qualifying senior citizens or disabled homeowners.
+            </p>
+            <p>
+              In Idaho, the licensing and titling of vehicles and vessels performed at DMVs also falls under the responsibility of the County Assessor.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="container col-md-6" id="notices">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title text-center">Notices</h3>
+    <div class="row" id="newsNotices">
+      <div class="container col-md-6" id="notices">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center">Notices</h3>
+          </div>
+          <div class="list-group">
+            <div id="assrNotice" class="list-group-item"></div>
+          </div>
         </div>
-        <div class="list-group">
-          <div id="assrNotice" class="list-group-item"></div>
+      </div>
+      <div class="container col-md-6" id="news">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title text-center">News</h3>
+          </div>
+          <div class="list-group">
+            <div id="assrNews" class="list-group-item"></div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container col-md-6" id="news">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title text-center">News</h3>
-        </div>
-        <div class="list-group">
-          <div id="assrNews" class="list-group-item"></div>
+    <div class="row" id="deptPics">
+      <div class="well">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+          </ol>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="https://www.latah.id.us/assessor/2017/Michelle.swearing.in.jpg" alt="Deputy Assessors Sworn In">
+              <img src="https://www.latah.id.us/assessor/2017/Landon.swearing.in.jpg" alt="Deputy Assessors Sworn In">
+              <div class="carousel-caption">
+                Deputy Assessors Sworn In - As members of the Latah County Assessor's staff, employees are bound to a code of ethics. Each Deputy Assessor takes an oath of office to support the laws of the United States and Idaho, and to faithfully discharge their duties in performing just and equal assessments.
+              </div>
+            </div>
+            <div class="item">
+              <img src="https://www.latah.id.us/assessor/2017/abstract.tech.jpg" alt="Amy, Data Abstract Analyst">
+              <div class="carousel-caption">
+                Amy, Data Abstract Analyst, reviews a daily audit of the property roll with Technical Systems Appraiser, Lynn. Amy performs computer data entry for over 18,000 real property parcels in Latah County. This computer-assisted mass appraisal program integrates real estate market data, construction cost data and appraisal input to compute equitable property tax assessments.
+              </div>
+            </div>
+            <div class="item">
+              <img src="https://www.latah.id.us/assessor/2017/neighborhood.map.jpg" alt="Latah County property appraisers">
+              <div class="carousel-caption">
+                Latah County property appraisers: - Nick, Landon and Ashley, Latah County property appraisers, stand before "neighborhood" maps. Appraisers use sales data to assist in identifying different market areas within Latah County.
+              </div>
+            </div>
+            <div class="item">
+              <img src="https://www.latah.id.us/assessor/2017/front.office.jpg" alt="Assessor's front office">
+              <div class="carousel-caption">
+                Assessor's front office: - "Front Office" staff are Lynn, Debbie, Terrie and Cammie. They perform duties required by Idaho Code to maintain a current record of property ownership in Latah County, to administer homeowner exemptions, to manage the property tax reduction program for eligible senior citizens or disabled owners, and to track and assess manufactured homes that enter the county during the course of the year.
+              </div>
+            </div>
+            <div class="item">
+              <img src="https://www.latah.id.us/images/assessor_cartographer.jpg" class="center-block" alt="Assessor's Cartographer">
+              <div class="carousel-caption">
+                Assessor's Cartographer, Debbie, is the lead for processing all deeds of conveyance for property in Latah County. Idaho Code requires that, "The assessor must have prepared a full, accurate and complete plat record of all parcels of real property within his county." Debbie performs much of this work, including splitting parcels and processing land divisions, with computer
+                mapping.
+              </div>
+            </div>
+            <div class="item">
+              <img src="https://www.latah.id.us/images/assesor_personal_prop.jpg" class="center-block" alt="Terrie, Personal Property Clerk">
+              <div class="carousel-caption">
+                Terrie, Personal Property Clerk, performs data entry and assessments for approximately 2,000 personal property parcels. Idaho Code requires that each personal property owner submit a true and correct statement of personal property to the county assessor not later than March 15 each year, and that the assessor determine the market value for assessment. 
+              </div>
+            </div>
+            <div class="item">
+              <img src="https://www.latah.id.us/assessor/2017/appraisal.staff.jpg" alt="Nick, Landon, Lynn, Alyssa (Senior Residential Appraiser), David, and Ashley">
+              <div class="carousel-caption">
+                Nick, Landon, Lynn, Alyssa (Senior Residential Appraiser), David, and Ashley review the assessed values of recently inspected properties. The Assessor's staff of ad valorem appraisers physically visit every property once during the 5 year revaluation cycle. They ensure recent property updates, together with current market and cost schedules, are correctly applied to result in a fair and reasonable market value "bottom line". 
+              </div>
+            </div>
+          </div>
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
     </div>
