--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -64,8 +64,8 @@ news: true
 				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
-				<!-- <a href="billing.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Billing Procedures</a> -->
 				<a href="marriage.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Marriage License</a>
+				<a href="passports.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Passports</a>
 				<a href="recording.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Recording</a>
 			</div>
 		</div>
