--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -51,8 +51,9 @@ news: true
 				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
 			<div class="list-group">
-				<li class="list-group-item text-center">Marriage License</li>
 				<li class="list-group-item text-center">Deed Recording</li>
+				<li class="list-group-item text-center">Elections</li>
+				<li class="list-group-item text-center">Marriage License</li>
 				<li class="list-group-item text-center">Passports</li>
 			</div>
 		</div>
