--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -8,12 +8,23 @@ calendar: true
 <div class="row">
   <div class="col-md-8">
     <div class="well">
-      More to come soon.
+      <div class="row">
+        <div class="col-md-6 ">
+          <a href="https://idahovotes.gov/" target="_blank">
+            <img src="https://idahovotes.gov/images/LinkedIn.jpg" width="320" alt="Idaho Votes">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <video width="320" height="180" controls>
+            <source src="https://idahovotes.gov/videos/Extended_Video.mp4" type="video/mp4"> Your browser does not support the video tag.
+          </video>
+        </div>
+      </div>
     </div>
     <div class="" id="upcomginElections">
       <div class="panel panel-primary">
         <div class="panel-heading text-center">
-          <h4>Upcoming Elections</h4>
+          <h4 class="panel-title">Upcoming Elections</h4>
         </div>
         <div class="panel-body">
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -33,7 +44,7 @@ calendar: true
                         Sample Ballots
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -43,7 +54,7 @@ calendar: true
                         Additional Resources
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -66,7 +77,7 @@ calendar: true
                         Sample Ballots
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -76,7 +87,7 @@ calendar: true
                         Additional Resources
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -99,7 +110,7 @@ calendar: true
                         Sample Ballots
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -109,7 +120,7 @@ calendar: true
                         Additional Resources
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -132,7 +143,7 @@ calendar: true
                         Sample Ballots
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -142,7 +153,7 @@ calendar: true
                         Additional Resources
                       </div>
                       <div class="panel-body">
-                        Basic panel example
+                        TBD
                       </div>
                     </div>
                   </div>
@@ -193,55 +204,12 @@ calendar: true
     <!-- Upcoming Events -->
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h4 class="text-center">Upcoming</h4>
+        <h4 class="panel-title text-center">Upcoming</h4>
       </div>
       <div id='loading' class="text-center"><i class="fa fa-spinner fa-2x fa-spin"></i></div>
       <div id='calendar'></div>
     </div><br />
     <!-- Election Resources -->
-    <!-- <div class="panel panel-default" id="electionResources">
-      <div class="panel-heading">
-        <h3 class="panel-title">Election Resources</h3>
-      </div>
-      <div class="panel list-group">
-        <div id="menu" data-children=".item">
-          <a class="list-group-item item" data-toggle="collapse" data-target="#er1" data-parent="#menu">
-            Voter Registration and Absentee Requests
-          </a>
-          <div class="list-group" id="er1">
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Online Voter Registration</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Printable Voter Registration Form</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Absentee Ballot Request Form</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Absentee Ballot Status</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Political Party Affiliation Form</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Military/Overseas Registration and Absentee Request</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Out of State Voter Registration and Absentee Request Information</a>
-          </div>
-          <a href="" class="list-group-item">Polling/Voting Location Finder</a>
-          <a class="list-group-item" data-toggle="collapse" data-target="#er3" data-parent="#menu">Prior Elections and Results</a>
-          <div id="er3" class="sublinks collapse">
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Past Elections</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Election Results &amp; Information</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> State of Idaho Election Results</a>
-          </div>
-          <a class="list-group-item" data-toggle="collapse" data-target="#er4" data-parent="#menu">Maps</a>
-          <div id="er4" class="sublinks collapse">
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> City of Moscow Precinct Map</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> City of Moscow Commissioner District Map</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Latah County Precinct Map</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Latah County Commissioner District Map</a>
-          </div>
-          <a class="list-group-item" data-toggle="collapse" data-target="#er5" data-parent="#menu">Calendars &amp; Links</a>
-          <div id="er5" class="sublinks collapse">
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> 2018 Election Calendar for Latah County</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> 2018 State Consolidation Calendar</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> City Clerks</a>
-            <a href="" class="list-group-item"><span class="glyphicon glyphicon-chevron-right"></span> Political Parties in Idaho</a>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <div class="panel-group" id="electionResources" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="erHeadingOne">
@@ -280,9 +248,9 @@ calendar: true
         </div>
         <div id="er3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="erHeadingThree">
           <div class="list-group">
-            <a href="#" class="list-group-item">Past Elections</a>
-            <a href="#" class="list-group-item">Election Results &amp; Information</a>
-            <a href="http://www.sos.idaho.gov/elect/results.htm" target="_blank" class="list-group-item">State of Idaho Election Results</a>
+            <a href="#" onclick="alert('For past elections information, please contact the Auditors office.')" class="list-group-item">Past Elections</a>
+            <a href="#" class="list-group-item" onclick="alert('No results have been posted at this time.')">Election Results &amp; Information</a>
+            <a href="https://sos.idaho.gov/elect/results/index.html" target="_blank" class="list-group-item">State of Idaho Election Results</a>
           </div>
         </div>
       </div>
