--- a/_pages/dept/auditor/elections/home.html
+++ b/_pages/dept/auditor/elections/home.html
@@ -9,13 +9,13 @@ calendar: true
   <div class="col-md-8">
     <div class="well">
       <div class="row">
-        <div class="col-md-6 ">
+        <div class="col-md-6">
           <a href="https://idahovotes.gov/" target="_blank">
-            <img src="https://idahovotes.gov/images/LinkedIn.jpg" width="320" alt="Idaho Votes">
+            <img src="https://idahovotes.gov/images/LinkedIn.jpg" class="center-block" width="320" alt="Idaho Votes">
           </a>
         </div>
-        <div class="col-md-6">
-          <video width="320" height="180" controls>
+        <div class="col-md-6 center-block">
+          <video class="center-block" width="320" height="180" controls>
             <source src="https://idahovotes.gov/videos/Extended_Video.mp4" type="video/mp4"> Your browser does not support the video tag.
           </video>
         </div>
